#12 #13 #14 - Begin developing documentation for US 5.1.12, 5.1.13 & 5.1.14

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,1 @@
-obj/Debug/netcoreapp8.0/DDDNetCore.AssemblyInfo.cs
-obj/Debug/netcoreapp8.0/DDDNetCore.AssemblyInfoInputs.cache
-obj/Debug/netcoreapp8.0/DDDNetCore.assets.cache
-obj/Debug/netcoreapp8.0/DDDNetCore.csproj.AssemblyReference.cache
-obj/Debug/netcoreapp8.0/DDDNetCore.GeneratedMSBuildEditorConfig.editorconfig
+/obj/Debug
