#1 update 5.1.1 readme and user Role and Email

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 /obj/Debug
+bin/Debug/net8.0/DDDNetCore.dll
+bin/Debug/net8.0/DDDNetCore.exe
+bin/Debug/net8.0/DDDNetCore.pdb
+obj/DDDNetCore.csproj.nuget.dgspec.json
+obj/DDDNetCore.csproj.nuget.dgspec.json
+obj/DDDNetCore.csproj.nuget.dgspec.json
+obj/DDDNetCore.csproj.nuget.dgspec.json
+obj/DDDNetCore.csproj.nuget.dgspec.json
+obj/DDDNetCore.csproj.nuget.g.props
+obj/project.assets.json
+obj/project.nuget.cache
