--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ obj/DDDNetCore.csproj.nuget.g.props
 bin/Debug/net8.0/DDDNetCore.dll
 bin/Debug/net8.0/DDDNetCore.exe
 bin/Debug/net8.0/DDDNetCore.pdb
+bin/Debug/net8.0/DDDNetCore.dll
+bin/Debug/net8.0/DDDNetCore.exe
+bin/Debug/net8.0/DDDNetCore.pdb
