--- a/angular-three/package.json
+++ b/angular-three/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.10",
+    "@types/three": "^0.169.0",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
+    "three": "^0.170.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
