#31 update patient profile

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,27 @@ TestsU/obj/Debug/net8.0/TestsU.pdb
 TestsU/obj/Debug/net8.0/TestsU.sourcelink.json
 TestsU/obj/Debug/net8.0/ref/TestsU.dll
 TestsU/obj/Debug/net8.0/refint/TestsU.dll
+docs/global artifacts/02.analysis/sprint1/Level3/logicalView3.vpp.bak_000f
+docs/global artifacts/02.analysis/sprint1/Level3/logicalView3.vpp.bak_001d
+docs/global artifacts/02.analysis/sprint1/Level3/logicalView3.vpp.bak_002d
+docs/global artifacts/02.analysis/sprint1/Level3/logicalView3.vpp.bak_003d
+docs/global artifacts/02.analysis/sprint1/Level3/logicalView3.vpp.bak_004d
+docs/global artifacts/02.analysis/sprint1/Level3/logicalView3.vpp.vbak
+docs/global artifacts/02.analysis/sprint1/Level3/logicalView3.vpp.vbak~1
+docs/global artifacts/02.analysis/sprint1/Level3/logicalView3.vux.bak
+docs/global artifacts/02.analysis/sprint2/level1LogicalAndImplementationView.png.vpp.bak_000d
+docs/global artifacts/02.analysis/sprint2/level1LogicalAndImplementationView.png.vpp.bak_001f
+docs/global artifacts/02.analysis/sprint2/level1LogicalAndImplementationView.vpp.bak_000f
+docs/global artifacts/02.analysis/sprint2/level2LogicalAndImplementationView.vpp.bak_000f
+docs/global artifacts/02.analysis/sprint2/level2LogicalAndImplementationView.vpp.bak_001d
+docs/global artifacts/02.analysis/sprint2/level2LogicalAndImplementationView.vpp.bak_002d
+docs/global artifacts/02.analysis/sprint2/level2LogicalAndImplementationView.vpp.bak_003d
+docs/global artifacts/02.analysis/sprint2/level2LogicalAndImplementationView.vpp.bak_004d
+docs/global artifacts/02.analysis/sprint1/Level1/logicalView.vpp.bak_000f
+docs/global artifacts/02.analysis/sprint1/Level1/logicalView.vpp.vbak
+docs/global artifacts/02.analysis/sprint1/Level1/logicalView.vpp.vbak~1
+docs/global artifacts/02.analysis/sprint1/Level2/logicalView.vpp.bak_000f
+docs/global artifacts/02.analysis/sprint1/Level2/logicalView.vpp.bak_001d
+docs/global artifacts/02.analysis/sprint1/Level2/logicalView.vpp.vbak
+docs/global artifacts/02.analysis/sprint1/Level2/logicalView.vpp.vbak~1
+bin/Debug/net8.0/DDDNetCore.dll
