--- a/angular-three/tsconfig.spec.json
+++ b/angular-three/tsconfig.spec.json
@@ -5,11 +5,14 @@
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine"
+      "jasmine",
+      "sweetalert2",
+      "node"
     ]
   },
   "include": [
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
-  ]
+  ],
+  
 }
