--- a/angular-three/tsconfig.json
+++ b/angular-three/tsconfig.json
@@ -1,6 +1,8 @@
 /* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
 /* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
+  "include": ["src","cypress"],
+  "exclude": ["cypress"],
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
@@ -32,10 +34,7 @@
     "strictInputAccessModifiers": true,
     "strictTemplates": true
   },
-  "exclude": [
-    "cypress/**/*.ts",
-    "cypress.config.ts"
-  ]
+  
   
   
 }
