#62 #63 #27 Angular-ThreeJS bridge

--- a/angular-three/angular.json
+++ b/angular-three/angular.json
@@ -26,6 +26,11 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/app/pages/Doctor/doctor/map",
+              "src/app/pages/Doctor/doctor/map/mazes",
+              "src/app/pages/Doctor/doctor/map/models",
+              "src/app/pages/Doctor/doctor/map/textures",
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
@@ -90,6 +95,8 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/app/pages/Doctor/doctor/map",
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
