--- a/angular-three/tsconfig.json
+++ b/angular-three/tsconfig.json
@@ -1,10 +1,11 @@
 /* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
 /* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
-  "include": ["src","cypress"],
+  "include": ["src","cypress", "remove"],
   "exclude": ["cypress"],
   "compileOnSave": false,
   "compilerOptions": {
+    "allowJs": true,
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
