--- a/DDDNetCore.csproj
+++ b/DDDNetCore.csproj
@@ -31,9 +31,17 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.1.2" />
     
+<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
+<PackageReference Include="System.Net.Http" Version="4.3.0" />
+<PackageReference Include="System.Text.Json" Version="8.0.0" />
+<PackageReference Include="System.Text.RegularExpressions" Version="4.3.0" />
+
+
+    
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3">
+    
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
