#74 Alteration of the allergy controller to be possible to get all the allergies

--- a/bulletproof-nodejs-ddd-1/package.json
+++ b/bulletproof-nodejs-ddd-1/package.json
@@ -89,5 +89,8 @@
   "bugs": {
     "url": "https://github.com/santiq/bulletproof-nodejs/issues"
   },
-  "homepage": "https://github.com/santiq/bulletproof-nodejs#readme"
+  "homepage": "https://github.com/santiq/bulletproof-nodejs#readme",
+  "directories": {
+    "test": "tests"
+  }
 }
