--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://0.0.0.0:5000;https://0.0.0.0:5001",
+      "applicationUrl": "http://localhost:5000;https://localhost:5001",
       "sslPort": 44343
     }
   },
