--- a/angular-three/package.json
+++ b/angular-three/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.10",
+    "@tweenjs/tween.js": "^25.0.0",
     "@types/three": "^0.169.0",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
