--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "bootstrap-icons": "^1.11.3",
     "nodemon": "^3.1.9",
     "sweetalert2": "^11.14.5",
-    "three": "^0.169.0"
+    "three": "^0.169.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/xlsx": "^0.0.35",
     "vite": "^5.4.8"
   }
 }
