--- a/appsettings.json
+++ b/appsettings.json
@@ -1,3 +1,4 @@
+
 {
   "Logging": {
     "LogLevel": {
@@ -26,8 +27,8 @@
     "ClientId": "557762914279-7d87s63jvf102v51i6gtn7pqe5qh5tl5.apps.googleusercontent.com",
     "ClientSecret" : "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"        
   },
-  "PrologPath" : "http://localhost:5050/scheduleAllOperationsInADay",
-  "PrologPath2" : "http://localhost:5050/geneticAlg",
+  "PrologPath" : "http://20.82.142.194:5050/scheduleAllOperationsInADay",
+  "PrologPath2" : "http://20.82.142.194:5050/geneticAlg",
   "HostID" : "",
   "PortID" : ""
 }
