--- a/appsettings.json
+++ b/appsettings.json
@@ -28,7 +28,7 @@
     "ClientSecret" : "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"        
   },
   "PrologPath" : "http://20.82.142.194:5050/scheduleAllOperationsInADay",
-  "PrologPath2" : "http://20.82.142.194:5050/geneticAlg",
+  "PrologPath2" : "http://localhost:5050/geneticAlg",
   "HostID" : "",
   "PortID" : ""
 }
